# Image_Editor

./: CMakeLists.txt  main.cpp
